# poppy

./: .gitignore  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGES.txt  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  MANIFEST.in  POPPY_tutorial.ipynb  README.md  README.rst  ah_bootstrap.py  conftest.py  environment.yml  poppy_core.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setuptools_bootstrap.py  test_core.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  ci_workflows.yml  publish-to-pypi.yml
docs/: Makefile  about.rst  api.rst  available_optics.ipynb  classes.rst  conf.py  coronagraphs.rst  dev_notes.rst  dm_example_surface.fits  example_flower.fits  example_flower_opd.fits  examples.rst  extending.rst  fft_optimization.rst  fitsheaders.rst  fresnel.rst  gpu_acceleration.rst  index.rst  installation.rst  options.rst  overview.rst  performance.rst  relnotes.rst  requirements.txt  rtd-pip-requirements  sign_conventions.rst  sign_conventions_for_coordinates_and_phase.ipynb  wfe.rst
docs/_static/: style.css
docs/_templates/: page.html
docs/_themes/theme_webbpsf/: layout.html  theme.conf
docs/_themes/theme_webbpsf/static/: bootstrap-astropy.css  bootstrap-webbpsf.css  sidebar.js
docs/figures/: README Figure.ipynb
docs/figures/wfe/: WFE Documentation Figures.ipynb
licenses/: LICENSE.rst
notebooks/: Fresnel_Propagation_Demo.ipynb  MatrixFTCoronagraph_demo.ipynb  POPPY Examples.ipynb  POPPY_tutorial.ipynb  Physical Units Demo.ipynb  PowerSpectrumWFE_Demo.ipynb  Propagation through turbulent atmosphere.ipynb  SHWFS Demo.ipynb  Shack Hartmann Wavefront Sensor Demo.ipynb  Thermal Blooming Demo.ipynb  ThinLens_ZernikeAberration_and_ParameterizedAberration.ipynb  ThinLens_ZernikeOptic_and_ParameterizedDistortion.ipynb  ThinLens_ZernikeWFE_and_ParameterizedWFE.ipynb
poppy/: .#utils.py  __init__.py  _astropy_init.py  _version.py  accel_math.py  active_optics.py  conf.py  config.py  conftest.py  cython_version.py  dms.py  fresnel.py  fwcentroid.py  geometry.py  instrument.py  matrixDFT.py  misc.py  optics.py  physical_wavefront.py  poppy.cfg  poppy.py  poppy_core.py  settings.py  special_prop.py  sub_sampled_optics.py  tests.py  utils.py  version.py  wavefront.py  wfe.py  zernike.py
poppy/tests/: FITSFPMElement_test_result.fits  __init__.py  bowtie_fpm_0.05lamD.fits  coveragerc  optics.py  psd_wfe_ref_oap.fits  test_accel_math.py  test_active_optics.py  test_core.py  test_dms.py  test_errorhandling.py  test_fft.py  test_fresnel.py  test_fwcentroid.py  test_geometry.py  test_instrument.py  test_matrixDFT.py  test_matrixFTcoronagraph.py  test_misc.py  test_multiprocessing.py  test_nonsquare.py  test_optics.py  test_physical_wavefront.py  test_plotting.py  test_poppy.py  test_sign_conventions.py  test_special_prop.py  test_sub_sampled_optics.py  test_utils.py  test_wavefront.py  test_wfe.py  test_zernike.py
poppy_original/tests/: __init__.py
scripts/: README.rst
tests/: simple_tests.py  test_coronagraphy.py  test_matrixDFT.py  test_nonsquare.py  test_poppy.py  tests_part2.py
