[build-system]
requires = ["setuptools >= 61.2",
            "setuptools_scm[toml]>=3.4.3",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "poppy"
description = "Physical optics propagation (wavefront diffraction) for optical simulations, particularly of telescopes."
authors = [{name = "Marshall Perrin", email = "mperrin@stsci.edu"}]
license = {file = "LISCENCE.md"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.5.0",
    "matplotlib>=3.2.0",
    "astropy>=4.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["synphot"]
test = [
    "pytest",
    "pytest-astropy",
]
docs = [
    "nbsphinx",
    "stsci_rtd_theme",
    "sphinx-astropy",
    "sphinx_rtd_theme",
    "sphinx-automodapi",
    "sphinx-issues",
]

[project.urls]
Homepage = "https://github.com/spacetelescope/poppy"
Documentation = "https://poppy-optics.readthedocs.io/"
"Bug Tracker" = "https://github.com/spacetelescope/poppy/issues"

[project.readme]
text = '"POPPY (**P**\ hysical **O**\ ptics **P**\ ropagation in **Py**\ thon) is a Python package that simulates physical optical propagation including diffraction. It implements a flexible framework for modeling Fraunhofer and Fresnel diffraction and point spread function formation, particularly in the context of astronomical telescopes."'
content-type = "text/markdown"

[tool.pytest.ini_options]
minversion = "2.2"
norecursedirs = [
    "build",
    "docs/_build",
]
testpaths = "poppy docs"
astropy_header = "true"
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "-p no:warnings"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
"*" = ["*.fits", "*.csv"]
"poppy.tests" = ["data/*"]

[tool.setuptools_scm]
"write_to" = ["poppy/version.py"]

[tool.coverage.run]
source = ["poppy",]
omit = [
    "poppy/conftest*",
    "poppy/cython_version*",
    "poppy/setup_package*",
    "poppy/*/setup_package*",
    "poppy/*/*/setup_package*",
    "poppy/tests/*",
    "poppy/*/tests/*",
    "poppy/*/*/tests/*",
    "poppy/version*",
    "*/poppy/conftest*",
    "*/poppy/cython_version*",
    "*/poppy/setup_package*",
    "*/poppy/*/setup_package*",
    "*/poppy/*/*/setup_package*",
    "*/poppy/tests/*",
    "*/poppy/*/tests/*",
    "*/poppy/*/*/tests/*",
    "*/poppy/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "poppy/conftest*",
    "poppy/cython_version*",
    "poppy/setup_package*",
    "poppy/*/setup_package*",
    "poppy/*/*/setup_package*",
    "poppy/tests/*",
    "poppy/*/tests/*",
    "poppy/*/*/tests/*",
    "poppy/version*",
    "*/poppy/conftest*",
    "*/poppy/cython_version*",
    "*/poppy/setup_package*",
    "*/poppy/*/setup_package*",
    "*/poppy/*/*/setup_package*",
    "*/poppy/tests/*",
    "*/poppy/*/tests/*",
    "*/poppy/*/*/tests/*",
    "*/poppy/version*",
]