[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = poppy
description = Physical optics propagation (wavefront diffraction) for optical simulations, particularly of telescopes.
long_description = (this placeholder string will be replaced automatically with poppy's top-level docstring.)
author = Marshall Perrin
author_email = mperrin@stsci.edu
license = BSD
url = https://pythonhosted.org/poppy/
edit_on_github = False
github_project = mperrin/poppy
