[metadata]
name = poppy
description = Physical optics propagation (wavefront diffraction) for optical simulations, particularly of telescopes.
long_description = (this placeholder string will be replaced automatically with poppy's top-level docstring.)
author = Marshall Perrin
author_email = mperrin@stsci.edu
license = BSD
license_file = LICENSE.txt
url = https://poppy-optics.readthedocs.io/
edit_on_github = False
github_project = spacetelescope/poppy

# Python code quality checker
[flake8]
exclude: .git,__pycache__, test*
max-line-length = 120

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.13.0
    scipy>=1.0.0
    matplotlib>=2.0.0
    astropy>=3.0.0
python_requires = >=3.6
setup_requires = setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-astropy
docs =
    nbsphinx
    stsci_rtd_theme
    sphinx-astropy
    sphinx_rtd_theme
    sphinx-automodapi
    sphinx-issues

[options.package_data]
* = *.fits, *.csv
poppy.tests = data/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = poppy docs
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = -p no:warnings

[coverage:run]
source = poppy
omit =
   poppy/conftest*
   poppy/cython_version*
   poppy/setup_package*
   poppy/*/setup_package*
   poppy/*/*/setup_package*
   poppy/tests/*
   poppy/*/tests/*
   poppy/*/*/tests/*
   poppy/version*
   */poppy/conftest*
   */poppy/cython_version*
   */poppy/setup_package*
   */poppy/*/setup_package*
   */poppy/*/*/setup_package*
   */poppy/tests/*
   */poppy/*/tests/*
   */poppy/*/*/tests/*
   */poppy/version*

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
omit =
   poppy/conftest*
   poppy/cython_version*
   poppy/setup_package*
   poppy/*/setup_package*
   poppy/*/*/setup_package*
   poppy/tests/*
   poppy/*/tests/*
   poppy/*/*/tests/*
   poppy/version*
   */poppy/conftest*
   */poppy/cython_version*
   */poppy/setup_package*
   */poppy/*/setup_package*
   */poppy/*/*/setup_package*
   */poppy/tests/*
   */poppy/*/tests/*
   */poppy/*/*/tests/*
   */poppy/version*
